attached_assets/Pasted-INFO-root-Database-tables-created-To-make-Google-authentication-work-1-Go-to-https-console-clo-1747753985348.txt
INFO:root:Database tables created
To make Google authentication work:
1. Go to https://console.cloud.google.com/apis/credentials
2. Create a new OAuth 2.0 Client ID
3. Add https://188f3824-8f8e-4b6f-837f-aa0a3eacf478-00-14n2q3spwc1e4.riker.replit.dev/google_login/callback to Authorized redirect URIs

For detailed instructions, see:
https://docs.replit.com/additional-resources/google-auth-in-flask#set-up-your-oauth-app--client

[2025-05-20 15:06:37 +0000] [2420] [INFO] Worker reloading: /home/runner/workspace/routes.py modified
[2025-05-20 15:06:37 +0000] [2420] [INFO] Worker exiting (pid: 2420)
[2025-05-20 15:06:37 +0000] [2463] [INFO] Booting worker with pid: 2463
INFO:root:Database tables created
[2025-05-20 15:06:41 +0000] [2463] [ERROR] invalid syntax (routes.py, line 354)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 2, in <module>
    import routes  # noqa: F401
    ^^^^^^^^^^^^^
  File "/home/runner/workspace/routes.py", line 354
    else:
    ^^^^
SyntaxError: invalid syntax
[2025-05-20 15:06:44 +0000] [2463] [INFO] Worker reloading: /home/runner/workspace/routes.py modified
[2025-05-20 15:06:44 +0000] [2463] [INFO] Worker exiting (pid: 2463)
[2025-05-20 15:06:44 +0000] [2500] [INFO] Booting worker with pid: 2500
INFO:root:Database tables created
[2025-05-20 15:06:46 +0000] [2500] [ERROR] unexpected indent (routes.py, line 354)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 2, in <module>
    import routes  # noqa: F401
    ^^^^^^^^^^^^^
  File "/home/runner/workspace/routes.py", line 354
    property_image = PropertyImage(
IndentationError: unexpected indent
[2025-05-20 15:06:57 +0000] [2500] [INFO] Worker reloading: /home/runner/workspace/routes.py modified
[2025-05-20 15:06:57 +0000] [2500] [INFO] Worker exiting (pid: 2500)
[2025-05-20 15:06:57 +0000] [2545] [INFO] Booting worker with pid: 2545